--- a/Website/css/bootstrap.css
+++ b/Website/css/bootstrap.css
@@ -6238,11 +6238,13 @@ button.close {
 }
 .carousel {
   position: relative;
+  background-image: url("images/1.jpg");
 }
 .carousel-inner {
   position: relative;
   width: 100%;
   overflow: hidden;
+
 }
 .carousel-inner > .item {
   position: relative;
