--- a/Website/css/bootstrap3.css
+++ b/Website/css/bootstrap3.css
@@ -6790,7 +6790,7 @@ button.close {
 }
  
  .cover.active{
-  border: 5px solid yellow;
+  border: 3px solid #dd9663;
   border-radius: 3px;
   opacity:1;  
  }
